--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -3514,9 +3514,8 @@ body.sidebar-mini .main-sidebar .sidebar-menu > li > a.has-dropdown:after {
 }
 
 body.sidebar-mini .main-sidebar .sidebar-menu > li.active > a {
-    box-shadow: 0 4px 8px #acb5f6;
-    background-color: #6777ef;
-    color: #fff;
+    background-color: #fff;
+    color: #6777ef;
 }
 
 body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu {
